Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -313,11 +313,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'City': 'Marakesh', 'Country': 'Morocco', 'Population': 929, 'Area': 230},\n",
+       " {'City': 'Albuquerque', 'Country': 'USA', 'Population': 559, 'Area': 491},\n",
+       " {'City': 'Los Cabos', 'Country': 'Mexico', 'Population': 288, 'Area': 3751},\n",
+       " {'City': 'Greenville', 'Country': 'USA', 'Population': 93, 'Area': 68},\n",
+       " {'City': 'Archipelago Sea',\n",
+       "  'Country': 'Finland',\n",
+       "  'Population': 60,\n",
+       "  'Area': 2000},\n",
+       " {'City': 'Pyeongchang',\n",
+       "  'Country': 'South Korea',\n",
+       "  'Population': 44,\n",
+       "  'Area': 1464},\n",
+       " {'City': 'Walla Walla Valley',\n",
+       "  'Country': 'USA',\n",
+       "  'Population': 33,\n",
+       "  'Area': 35},\n",
+       " {'City': 'Salina Island', 'Country': 'Italy', 'Population': 3, 'Area': 26},\n",
+       " {'City': 'Solta', 'Country': 'Croatia', 'Population': 2, 'Area': 59},\n",
+       " {'City': 'Iguazu Falls',\n",
+       "  'Country': 'Argentina',\n",
+       "  'Population': 0,\n",
+       "  'Area': 2396}]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "salina = cities\n",
+    "salina = cities[2:]\n",
     "salina\n",
     "# {'City': 'Salina Island', 'Country': 'Italy', 'Population': 3, 'Area': 26}"
    ]
