Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -367,7 +367,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "los_cabos_pop = None\n",
+    "los_cabos_pop = cities[4]['Po']\n",
     "los_cabos_pop # 288"
    ]
   },
