--- a/index.ipynb
+++ b/index.ipynb
@@ -449,25 +449,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'City': 'PyeongChang',\n",
-       " 'Country': 'South Korea',\n",
-       " 'Population': 44,\n",
-       " 'Area': 1464}"
+       "dict_values(['PyeongChang', 'South Korea', 44, 1464])"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pyeongchang_values = cities[7]\n",
+    "pyeongchang_values = cities[7].values()\n",
     "\n",
     "pyeongchang_values # ['PyeongChang', 'South Korea', 44, 1464]"
    ]
